refactor: 서비스 메서드 로직 단순환 및 반환 타입 변경